# entropy-os

./: .gitignore  AGENTS.md  BUILD.md  NEXT_STEPS.md  README.md  pyproject.toml
docs/: architecture.md  decay_identity_v0_2.md  entropy_model.md  philosophy.md
schemas/: entropy.aliases.schema.json
src/entropyos/: __init__.py  api.py  cli.py  decay.py  errors.py  identity.py  runtime.py  scheduler.py  serde.py  store.py  ttl.py  version.py
tests/: test_api_expiry.py  test_decay_identity_contract.py  test_decay_pruning.py  test_determinism.py  test_serde.py  test_state_forgetting.py  test_v02_integration.py
